fix: overflowing
Change overflow from body to app.

--- a/src/style/base/_reset.scss
+++ b/src/style/base/_reset.scss
@@ -54,6 +54,10 @@ html {
   }
 }
 
+#app {
+  overflow-x: hidden;
+}
+
 body {
   line-height: 1.5;
   font-family: var(--primary-font-family);
